--- a/_posts/2021-09-23-BOJ-2628.markdown
+++ b/_posts/2021-09-23-BOJ-2628.markdown
@@ -1,39 +1,44 @@
 ---
 layout: post
-title:  "BOJ - 2635 solution"
+title:  "BOJ - 2628 solution"
 date:   2021-09-23 18:30:00 +0900
 categories: algorithm
 tags: [algorithm, BOJ, solution]
 ---
-[2635. 수 이어가기](https://www.acmicpc.net/problem/2635)
+[2628. 종이자르기](https://www.acmicpc.net/problem/2628)
 
 풀이
 
 ```python
+W, H = map(int, input().split())
 N = int(input())
+horizontal_cut = [0] 
+vertical_cut = [0]
+for i in range(N):
+    a, b = map(int, input().split())
+    if a == 0:
+        horizontal_cut.append(b)
+    else:
+        vertical_cut.append(b)
 
-max_length = 0
-final_second = 0
-for i in range(1, N + 1):
-    first = N
-    second = i    
-    count = 2
-    while first - second >= 0:
-        count += 1
-        first, second = second, first - second
-    
-    if max_length < count:
-        max_length = count
-        final_second = i
+horizontal_cut.sort()
+vertical_cut.sort()
 
-print(max_length)
-first = N
-second = final_second
-result = [first, second]
-while first - second >= 0:
-    result.append(first - second)
-    first, second = second, first - second 
-result = ' '.join(map(str, result))
+horizontal_cut.append(H)
+vertical_cut.append(W)
+
+width_max = 0
+height_max = 0
+for i in range(len(vertical_cut) - 1):
+    temp = vertical_cut[i+1] - vertical_cut[i]
+    if width_max < temp:
+        width_max = temp
+for i in range(len(horizontal_cut) - 1):
+    temp = horizontal_cut[i+1] - horizontal_cut[i]
+    if height_max < temp:
+        height_max = temp
+
+result = width_max * height_max
 print(result)
 ```
 
